create structure html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project-HTML-CSS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <h1>The News Times</h1>
+    </header>
+    <section>
+        <article></article>
+        <article></article>
+        <article></article>
+    </section>
+    <section>
+        <article></article>
+        <article><ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul></article>        
+    </section>
+
 </body>
 </html>
