complete content index.html

--- a/index.html
+++ b/index.html
@@ -12,19 +12,58 @@
         <h1>The News Times</h1>
     </header>
     <section>
-        <article></article>
-        <article></article>
-        <article></article>
+        <article>
+            <h1>Student Learns HTML</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
+               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
+               culpa distinctio commodi aut.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
+               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
+               culpa distinctio commodi aut.</p>
+        </article>
+        <article>
+            <h1>BREAKING: Puppies Are Adorable</h1>
+            <img src="http://placecorgi.com/500/250" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, dolores? 
+               Illo dolores, rerum iste aut porro doloribus fugit itaque voluptas.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
+               incidunt ullam ea magni ipsam perferendis ratione pariatur enim repellendus quia?</p>
+        </article>
+        <article>
+            <h1>CSS Is Apparently a Thing</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
+               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
+               culpa distinctio commodi aut.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
+               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
+               culpa distinctio commodi aut.</p>
+        </article>
     </section>
     <section>
-        <article></article>
-        <article><ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-        </ul></article>        
+        <article>
+            <h1>Boys likes turtles</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
+               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
+               culpa distinctio commodi aut.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
+               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
+               culpa distinctio commodi aut.</p>
+        </article>
+        <article>
+            <ul>
+                <li>Politics</li>
+                <li>Technology</li>
+                <li>Local</li>
+                <li>Opinion</li>
+                <li>Sports</li>
+            </ul>
+        </article>        
     </section>
 
 </body>
