--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="header">
         <h1>The News Times</h1>
     </header>
-    <section>
-        <article>
+    <section class="top">
+        <article class="one">
             <h1>Student Learns HTML</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
@@ -23,7 +23,7 @@
                iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
                culpa distinctio commodi aut.</p>
         </article>
-        <article>
+        <article class="two">
             <h1>BREAKING: Puppies Are Adorable</h1>
             <img src="http://placecorgi.com/500/250" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, dolores? 
@@ -31,7 +31,7 @@
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
                incidunt ullam ea magni ipsam perferendis ratione pariatur enim repellendus quia?</p>
         </article>
-        <article>
+        <article class="three">
             <h1>CSS Is Apparently a Thing</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
@@ -43,8 +43,8 @@
                culpa distinctio commodi aut.</p>
         </article>
     </section>
-    <section>
-        <article>
+    <section class="bottom">
+        <article class="four">
             <h1>Boys likes turtles</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
@@ -55,7 +55,7 @@
                iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
                culpa distinctio commodi aut.</p>
         </article>
-        <article>
+        <article class="five">
             <ul>
                 <li>Politics</li>
                 <li>Technology</li>
