--- a/index.html
+++ b/index.html
@@ -6,46 +6,54 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Project-HTML-CSS</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <h1>The News Times</h1>
     </header>
-    <section class="top">
-        <article class="one">
-            <h1>Student Learns HTML</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
-               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
-               culpa distinctio commodi aut.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
-               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
-               culpa distinctio commodi aut.</p>
+    <section class=" section top">
+        <article class=" story one">
+            <h1 class="title">Student Learns HTML</h1>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Sint natus necessitatibus accusamus et, eaque mollitia? Iste nesciunt id 
+                porro numquam neque dolores laborum repudiandae dicta fugit necessitatibus 
+                perspiciatis amet est eos, quod quae aliquid tenetur dolorem? Recusandae maxime
+                harum eum!</p>
+            <p class="text">Explicabo est deleniti molestias libero consectetur consequatur odio,
+                quibusdam commodi error aperiam quos fugit autem vero ex perferendis repellendus
+                eligendi praesentium. Inventore debitis similique aperiam vitae numquam earum dolores,
+                beatae voluptatem illo cupiditate autem quae quidem tempore amet quo asperiores?</p>
         </article>
-        <article class="two">
-            <h1>BREAKING: Puppies Are Adorable</h1>
-            <img src="http://placecorgi.com/500/250" alt="">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, dolores? 
-               Illo dolores, rerum iste aut porro doloribus fugit itaque voluptas.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Laudantium
-               incidunt ullam ea magni ipsam perferendis ratione pariatur enim repellendus quia?</p>
+        <article class=" story two">
+            <h1 class="title">BREAKING: Puppies Are Adorable</h1>
+            <img class="image" src="http://placecorgi.com/500/300" alt="adorable corgi dog" />
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Sint natus necessitatibus accusamus et, eaque mollitia? Iste nesciunt id 
+                porro numquam neque dolores laborum repudiandae dicta fugit necessitatibus 
+                perspiciatis amet est eos, quod quae aliquid tenetur dolorem? Recusandae maxime
+                harum eum!</p>
+            <p class="text">Explicabo est deleniti molestias libero consectetur consequatur odio,
+                quibusdam commodi error aperiam quos fugit autem vero ex perferendis repellendus
+                eligendi praesentium. Inventore debitis similique aperiam vitae numquam earum dolores,
+                beatae voluptatem illo cupiditate autem quae quidem tempore amet quo asperiores?</p>
         </article>
-        <article class="three">
-            <h1>CSS Is Apparently a Thing</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
-               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
-               culpa distinctio commodi aut.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-               Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
-               iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
-               culpa distinctio commodi aut.</p>
+        <article class=" story three">
+            <h1 class="title">CSS Is Apparently a Thing</h1>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Sint natus necessitatibus accusamus et, eaque mollitia? Iste nesciunt id 
+                porro numquam neque dolores laborum repudiandae dicta fugit necessitatibus 
+                perspiciatis amet est eos, quod quae aliquid tenetur dolorem? Recusandae maxime
+                harum eum!</p>
+            <p class="text">Explicabo est deleniti molestias libero consectetur consequatur odio,
+                quibusdam commodi error aperiam quos fugit autem vero ex perferendis repellendus
+                eligendi praesentium. Inventore debitis similique aperiam vitae numquam earum dolores,
+                beatae voluptatem illo cupiditate autem quae quidem tempore amet quo asperiores?</p>
         </article>
     </section>
-    <section class="bottom">
-        <article class="four">
-            <h1>Boys likes turtles</h1>
+    <section class=" section bottom">
+        <article class="story four">
+            <h1 class="title">Boys likes turtles</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                Dicta minima aperiam magnam, molestiae ad excepturi nihil labore
                iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
@@ -55,14 +63,13 @@
                iure sunt eos error reiciendis voluptatibus, dignissimos quia quod 
                culpa distinctio commodi aut.</p>
         </article>
-        <article class="five">
-            <ul>
-                <li>Politics</li>
-                <li>Technology</li>
-                <li>Local</li>
-                <li>Opinion</li>
-                <li>Sports</li>
-            </ul>
+        <ul class="nav-list">
+            <li class="nav-item"><a href="#">Politics</a></li>
+            <li class="nav-item"><a href="#">Technology</a></li>
+            <li class="nav-item"><a href="#">Local</a></li>
+            <li class="nav-item"><a href="#">Opinion</a></li>
+            <li class="nav-item"><a href="#">Sports</a></li>
+        </ul>
         </article>        
     </section>
 
